Migrate from deprecated boxed primitive constructors
to their replacements. E.g., `new Integer(...)` becomes
`Integer.valueOf(...)`.